# DAI-Image-Harmony

./: .env  .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cpp
include/: http_server.h  image_loaders.h
include/grpc/services/img_trans/: img_trans.h
include/grpc/serviecs/img_trans/: img_trans.h
include/http_server/http_response_handler/: http_response_handler_factory.h
include/image_loaders/: image_loader_base.h  image_loader_controller.h  image_loader_factory.h
include/image_loaders/local_image/: local_image_loader.h
include/image_loaders/webcamera_hikvision/: webcamera_hikvision.h
resources/protos/: img_trans.proto
scripts/: install_grpc.sh  install_libhv.sh  install_yaml-cpp.sh
src/: http_server.cpp  image_loaders.cpp
src/config/: CMakeLists.txt  config.cpp  config.h
src/consul/: consul_client.cpp
src/grpc/servers/: grpc_server.cpp  grpc_server_builder.cpp  grpc_server_builder.h
src/grpc/servers/image_harmony/: image_harmony_server.cpp  image_harmony_server.h
src/grpc/servers/img_trans/: img_trans_server.cpp  img_trans_server.h
src/grpc/servers/service_coordinate/: service_coordinate_server.cpp  service_coordinate_server.h
src/grpc/servers/service_coordinator/: service_coordinator_server.cpp  service_coordinator_server.h
src/grpc/servers/task_coordinate/: task_coordinate_server.cpp  task_coordinate_server.h
src/grpc/services/img_trans/: img_trans.cpp
src/grpc/services/task_coordinate/: task_coordinate.cpp  task_coordinate.h
src/grpc/serviecs/img_trans/: img_trans.cpp
src/http_server/: CMakeLists.txt  http_server.cpp  http_server.h  http_server_builder.cpp  http_server_builder.h
src/http_server/http_response_handler/: http_response_handler_base.cpp  http_response_handler_base.h  http_response_handler_factory.cpp  http_response_handler_test.cpp  http_response_handler_test.h
src/image_loaders/: image_loader_base.cpp  image_loader_base.h  image_loader_controller.cpp  image_loader_controller.h  image_loader_factory.cpp  image_loader_factory.h
src/image_loaders/local_image/: CMakeLists.txt  local_image_loader.cpp  local_image_loader.h
src/image_loaders/opencv_video_reader/cpu/: CMakeLists.txt  opencv_video_reader_cpu.cpp  opencv_video_reader_cpu.h
src/image_loaders/opencv_video_reader/gpu/: CMakeLists.txt  opencv_video_reader_gpu.cpp  opencv_video_reader_gpu.h
src/image_loaders/webcamera_hikvision/: CMakeLists.txt  webcamera_hikvision.cpp  webcamera_hikvision.h
src/utils/: log.cpp  log.h  random_utils.cpp  random_utils.h
